--- a/src/Busybee/People/PersonBundle/Resources/views/Person/edit.html.twig
+++ b/src/Busybee/People/PersonBundle/Resources/views/Person/edit.html.twig
@@ -5,10 +5,10 @@
 {% extends "@BusybeeTemplate/Default/template.html.twig" %}
 
 {% form_theme form
-"BusybeeTemplateBundle:Template:bootstrap.html.twig"
-"BusybeeTemplateBundle:Template:jquery.collection.html.twig"
+"@BusybeeTemplate/Template/bootstrap.html.twig"
+"@BusybeeTemplate/Template/jquery.collection.html.twig"
 "@BusybeePhone/Phone/phoneCollection.html.twig"
-"BusybeeStudentBundle:Person:gradeCollection.html.twig" %}
+"@BusybeeStudent/Person/gradeCollection.html.twig" %}
 
 {% block stylesheets %}
     {{ parent() }}
@@ -34,9 +34,9 @@
                 {% if tab.translation is defined %}{% set translation = tab.translation %}{% endif %}
                 {% set disabled = '' %}
                 {% if name == 'staff' and not isStaff() %}{% set disabled = ' class=disabled' %}{% endif %}
-                {% if name == 'student' and form.student.person is not defined %}{% set disabled = ' class=disabled' %}{% endif %}
-                {% if name == 'immigration' and form.student.person is not defined %}{% set disabled = ' class=disabled' %}{% endif %}
-                {% if name == 'grades' and form.student.person is not defined %}{% set disabled = ' class=disabled' %}{% endif %}
+                {% if name == 'student' and not isStudent() %}{% set disabled = ' class=disabled' %}{% endif %}
+                {% if name == 'immigration' and not isStudent() %}{% set disabled = ' class=disabled' %}{% endif %}
+                {% if name == 'grades' and not isStudent() %}{% set disabled = ' class=disabled' %}{% endif %}
                 {% if name == 'user' and not isUser() %}{% set disabled = ' class=disabled' %}{% endif %}
                 <li{{ disabled }} role="presentation"><a href="#{{ name }}" role="tab"
                                                          data-toggle="tab">{{ tab.label|trans({}, translation) }}</a>
@@ -52,15 +52,15 @@
                     <div class="tab-pane" id="{{ name }}">
                         {% include 'BusybeeTemplateBundle:Forms:emptyTab.html.twig' with {'name': 'person.staff.title'|trans({'%name%': form.vars.value.formatName}) } %}
                     </div>
-                {% elseif name == 'student' and form.student.person is not defined %}
+                {% elseif name == 'student' and not isStudent() %}
                     <div class="tab-pane" id="{{ name }}">
                         {% include 'BusybeeTemplateBundle:Forms:emptyTab.html.twig' with {'name': 'person.student.title'|trans({'%name%': form.vars.value.formatName}) } %}
                     </div>
-                {% elseif name == 'immigration' and form.student.person is not defined %}
+                {% elseif name == 'immigration' and not isStudent() %}
                     <div class="tab-pane" id="{{ name }}">
                         {% include 'BusybeeTemplateBundle:Forms:emptyTab.html.twig' with {'name': 'person.student.title'|trans({'%name%': form.vars.value.formatName}) } %}
                     </div>
-                {% elseif name == 'grades' and form.student.person is not defined %}
+                {% elseif name == 'grades' and not isStudent() %}
                     <div class="tab-pane" id="{{ name }}">
                         {% include 'BusybeeTemplateBundle:Forms:emptyTab.html.twig' with {'name': 'person.student.title'|trans({'%name%': form.vars.value.formatName}) } %}
                     </div>
