--- a/src/Busybee/People/PersonBundle/Resources/views/Person/toggleScript.html.twig
+++ b/src/Busybee/People/PersonBundle/Resources/views/Person/toggleScript.html.twig
@@ -3,7 +3,7 @@
 {% trans_default_domain "BusybeePersonBundle" %}
 
 <script type="text/javascript">
-    $(".studentToggle").change(function () {
+    $(".studentToggle").click(function () {
         var id = $(this).prop('id');
         id = id.substring(13);
         var route = "{{ path('person_toggle_student', {'id': '__id__'}) }}";
