--- a/src/Busybee/People/StudentBundle/Resources/views/Person/gradeCollection.html.twig
+++ b/src/Busybee/People/StudentBundle/Resources/views/Person/gradeCollection.html.twig
@@ -13,7 +13,7 @@
     {% set h3Content = h3Content ~ '</div>' %}
     {% set yearName = '(New)' %}
     {% if data is not null %}{% set yearName = data.getGradeYear %}{% endif %}
-    {% include '@BusybeeTemplate/Page/panelStart.html.twig' with {'name': yearName} %}
+    {% include '@BusybeeTemplate/Page/panelStart.html.twig' with {name: yearName} %}
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-6 well">
