--- a/src/Busybee/People/StudentBundle/Resources/views/Person/immigration.html.twig
+++ b/src/Busybee/People/StudentBundle/Resources/views/Person/immigration.html.twig
@@ -3,40 +3,40 @@
 {% trans_default_domain "BusybeeStudentBundle" %}
 
 <div class="panel panel-primary busybee-panel">
-    {% include "BusybeePersonBundle:Person:panelHeader.html.twig"  with {'header': 'person.student.immigrationTitle'} %}
+    {% include "BusybeePersonBundle:Person:panelHeader.html.twig"  with {'header': 'person.immigration.title'} %}
     <div class="panel-body">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-4 well">
-                    {{ form_row(form.student.citizenship1) }}
+                    {{ form_row(form.citizenship1) }}
                 </div>
                 <div class="col-sm-4 well">
-                    {{ form_row(form.student.citizenship1Passport) }}
+                    {{ form_row(form.citizenship1Passport) }}
                 </div>
                 <div class="col-sm-4 well">
-                    {{ form_row(form.student.citizenship1PassportScan) }}
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-4 well">
-                    {{ form_row(form.student.citizenship2) }}
-                </div>
-                <div class="col-sm-4 well">
-                    {{ form_row(form.student.citizenship2Passport) }}
-                </div>
-                <div class="col-sm-4 well">
-                    {{ form_row(form.student.visaExpiryDate) }}
+                    {{ form_row(form.citizenship1PassportScan) }}
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-4 well">
-                    {{ form_row(form.student.nationalIDCardNumber) }}
+                    {{ form_row(form.citizenship2) }}
                 </div>
                 <div class="col-sm-4 well">
-                    {{ form_row(form.student.nationalIDCardScan) }}
+                    {{ form_row(form.citizenship2Passport) }}
                 </div>
                 <div class="col-sm-4 well">
-                    {{ form_row(form.student.residencyStatus) }}
+                    {{ form_row(form.visaExpiryDate) }}
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4 well">
+                    {{ form_row(form.nationalIDCardNumber) }}
+                </div>
+                <div class="col-sm-4 well">
+                    {{ form_row(form.nationalIDCardScan) }}
+                </div>
+                <div class="col-sm-4 well">
+                    {{ form_row(form.residencyStatus) }}
                 </div>
             </div>
         </div>
