--- a/src/Busybee/Core/TemplateBundle/Resources/views/Scripts/monitorForm.html.twig
+++ b/src/Busybee/Core/TemplateBundle/Resources/views/Scripts/monitorForm.html.twig
@@ -6,6 +6,13 @@
         $('.disableOnChange').prop('disabled', true);
     });
 
+
+    $('button[type=reset]').click(function () {
+        $('.formChanged').prop("disabled", false);
+        $('button[title="Add"]').prop('disabled', false);
+        $('.disableOnChange').prop('disabled', false);
+    });
+
     $(".changeRecord").change(function () {
         {% if app.request.get('closeWindow') is not empty %}
         var path = "{{ path(route, {'id': '__id__', 'closeWindow': '_closeWindow'}) }}";
