--- a/src/Busybee/People/LocalityBundle/Resources/views/Locality/edit.html.twig
+++ b/src/Busybee/People/LocalityBundle/Resources/views/Locality/edit.html.twig
@@ -8,16 +8,11 @@
     <div class="panel-heading">
         <h3 class="panel-title">{{ 'locality.header.title'|trans }}
             {% if manager.canDelete() and id != 'Add' %}
-                <button type="button" title="{{ 'locality.action.delete'|trans }}"
-                        onclick="window.open('{{ path('locality_delete', {'id': id}) }}','_self')"
-                        class="btn btn-danger halflings halflings-erase" style="float: right"></button>
+                {{ deleteButton({title: 'locality.action.delete', transDomain: 'BusybeeLocalityBundle', windowOpen: {route: path('locality_delete', {'id': id})}})|raw }}
             {% endif %}
-            <button type="reset" title="{{ 'locality.action.reset'|trans }}" style="float: right;"
-                    class="btn btn-info halflings-refresh halflings"></button>
-            <button type="button" title="{{ 'locality.action.close'|trans }}" onclick="window.close()"
-                    style="float: right;" class="formChanged btn btn-warning halflings-folder-close halflings"></button>
-            <button type="submit" title="{{ 'locality.action.save'|trans }}" style="float: right;"
-                    class="btn btn-success halflings-save halflings"></button>
+            {{ resetButton({title: 'locality.action.reset', transDomain: 'BusybeeLocalityBundle', colour: 'info'})|raw }}
+            {{ closeButton({title: 'locality.action.close', transDomain: 'BusybeeLocalityBundle', class: 'formChanged btn btn-warning halflings-folder-close halflings'})|raw }}
+            {{ saveButton({title: 'locality.action.save', transDomain: 'BusybeeLocalityBundle'})|raw }}
         </h3>
         <p>{{ 'locality.header.description'|trans }}</p>
     </div>
