--- a/src/Busybee/Core/CalendarBundle/Resources/views/SpecialDays/specialDay.html.twig
+++ b/src/Busybee/Core/CalendarBundle/Resources/views/SpecialDays/specialDay.html.twig
@@ -8,7 +8,8 @@
     {% set h3Content = '<div class="collection-actions collection-panel">' %}
     {% set sday_id = '0' %}
     {% if form.vars.value is not null %}{% set sday_id = form.vars.value.getId() %}{% endif %}
-    {% set h3Content = h3Content ~ deleteButton({'title': 'specialDay.delete.title', 'transDomain': 'BusybeeCalendarBundle', 'class': 'halflings halflings-erase btn btn-warning collection-remove collection-action', 'style': 'float: right;', 'javascript': {'function': 'return removeSpecialDay', 'options': {'id': sday_id, 'year': app.request.get('id')}}}) %}
+    {% set h3Content = h3Content ~ duplicateButton({mergeClass: 'collection-duplicate collection-action'}) %}
+    {% set h3Content = h3Content ~ deleteButton({'title': 'specialDay.delete.title', 'transDomain': 'BusybeeCalendarBundle', colour: 'warning', mergeClass: 'collection-remove collection-action', 'style': 'float: right;', 'javascript': {'function': 'return removeSpecialDay', 'options': {'id': sday_id, 'year': app.request.get('id')}}}) %}
     {% set h3Content = h3Content ~ saveButton({'name': 'specialDays'}) %}
     {% set h3Content = h3Content ~ '</div>' %}
     {% include '@BusybeeTemplate/Page/panelStart.html.twig' with {'header': panelTitle, 'panelStyle': 'info', 'transDomain': 'BusybeeCalendarBundle'} %}
