--- a/src/Busybee/Core/CalendarBundle/Resources/views/SpecialDays/specialDaysScript.html.twig
+++ b/src/Busybee/Core/CalendarBundle/Resources/views/SpecialDays/specialDaysScript.html.twig
@@ -6,6 +6,7 @@
         allow_down: false,
         add: '<button title="{{ 'year.specialday.add'|trans({}, 'BusybeeCalendarBundle') }}" type="button" class="halflings halflings-plus-sign btn btn-primary" style="float: right;"></button>',
         remove: '<button title="{{ 'year.specialday.remove'|trans({}, 'BusybeeCalendarBundle') }}" type="button" class="halflings halflings-erase btn btn-warning" style="float: right;"></button>',
+        allow_duplicate: true,
         add_at_the_end: true
     });
 
