Import Merge Field Page
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/Core/TemplateBundle/Resources/views/Page/panelStart.html.twig
+++ b/src/Busybee/Core/TemplateBundle/Resources/views/Page/panelStart.html.twig
@@ -6,6 +6,10 @@
 
 {% trans_default_domain transDomain %}
 
+{% if title is defined %}
+    {% set header = title %}
+{% endif %}
+
 {% if header is not defined %}
     {% set header = 'panel.header.empty' %}
 {% endif %}
