--- a/src/Busybee/People/StudentBundle/Resources/views/Student/index.html.twig
+++ b/src/Busybee/People/StudentBundle/Resources/views/Student/index.html.twig
@@ -1,13 +1,11 @@
-{# src/Busybee/StudentBundle/Resources/views/Student/index.html.twig #}
-
 {% trans_default_domain "BusybeePersonBundle" %}
 
 {% extends "BusybeePersonBundle:Person:index.html.twig" %}
 
-{% block headerTitle %}{{ 'student.people.title'|trans }}{% endblock headerTitle %}
-{% block headerLead %}{{ 'student.people.description'|trans }}{% endblock headerLead %}
+{% block headerTitle %}{{ 'person.people.title'|trans }}{% endblock headerTitle %}
+{% block headerLead %}{{ 'person.people.description'|trans }}{% endblock headerLead %}
 
-{% set header = 'student.people.header' %}
+{% set header = 'person.people.title' %}
 {% block paginationContent %}
     {% include 'PaginationBundle:Default:index.html.twig' with {'form_array': {'action': path('student_manage') } } %}
 {% endblock paginationContent %}
