Dynamically change Student Entity from GradeBundle
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/People/StudentBundle/Resources/views/Person/grade.html.twig
+++ b/src/Busybee/People/StudentBundle/Resources/views/Person/grade.html.twig
@@ -1,5 +1,6 @@
 {% trans_default_domain "BusybeeStudentBundle" %}
 
-{{ form_widget(form.grades) }}
-
-{% do form.grades.setRendered %}
+{% if personManager.gradesInstalled() %}
+    {{ form_widget(form.grades) }}
+    {% do form.grades.setRendered %}
+{% endif %}
