--- a/src/Busybee/People/StudentBundle/Resources/views/Person/grade.html.twig
+++ b/src/Busybee/People/StudentBundle/Resources/views/Person/grade.html.twig
@@ -1,6 +1,7 @@
 {% trans_default_domain "BusybeeStudentBundle" %}
 
 {% if personManager.gradesInstalled() %}
+    <div class="gradeMessage"></div>
     {{ form_widget(form.grades) }}
     {% do form.grades.setRendered %}
 {% endif %}
