--- a/src/Busybee/People/PersonBundle/Resources/views/Person/index.html.twig
+++ b/src/Busybee/People/PersonBundle/Resources/views/Person/index.html.twig
@@ -98,7 +98,7 @@
                     {% if person.user_id is not empty %}
                         {% set route = path('home_page') ~ '?_switch_user=' ~ person.0.person.user.username %}
                         {% set additional = '' %}
-                        {% if person.user_id == app.user.getId %}{% set additional = 'disabled' %}{% endif %}
+                        {% if person.user_id == app.user.getId or person.0.person.user.expired %}{% set additional = 'disabled' %}{% endif %}
                         {{ miscButton({'transDomain': 'BusybeeSecurityBundle', 'title': 'security.impersonate.title', windowOpen: {route: route }, class: 'btn btn-xs btn-warning glyphicons glyphicons-theater', type: 'button', style: 'margin: 1px 0 0 0', 'additional': additional})|raw }}
                         {{ editButton({style: 'margin: 1px 0 0 0;', title: 'user.request.passwordReset', 'class': 'btn btn-warning btn-xs glyphicons glyphicons-user-key', 'transDomain': 'BusybeeSecurityBundle', 'windowOpen': {target: 'PasswordRequest', params: 'width=1200,height=650', route: path('security_user_reset_request', {id: person.user_id})}})|raw }}
                     {% endif %}
